# ChangeLog for dev-util/jenkins-bin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/jenkins-bin/ChangeLog,v 1.8 2014/10/27 21:37:17 mrueg Exp $

*jenkins-bin-1.565.3-r1 (27 Oct 2014)
*jenkins-bin-1.586-r1 (27 Oct 2014)

  27 Oct 2014; Manuel Rüger <mrueg@gentoo.org> +jenkins-bin-1.565.3-r1.ebuild,
  +jenkins-bin-1.586-r1.ebuild, -jenkins-bin-1.565.3.ebuild,
  -jenkins-bin-1.585.ebuild, -jenkins-bin-1.586.ebuild:
  Use correct category for blocker. dev-util instead of dev-utils.

*jenkins-bin-1.565.3 (27 Oct 2014)
*jenkins-bin-1.586 (27 Oct 2014)

  27 Oct 2014; Manuel Rüger <mrueg@gentoo.org> +jenkins-bin-1.565.3.ebuild,
  +jenkins-bin-1.586.ebuild, jenkins-bin-1.585.ebuild:
  Version bump. Add lts slot and make both slots block each other. Fixes bug
  #526214.

  24 Oct 2014; Manuel Rüger <mrueg@gentoo.org> -files/jenkins-bin.init,
  -jenkins-bin-1.584-r1.ebuild:
  Cleanup old.

  24 Oct 2014; Tony Vroon <chainsaw@gentoo.org> jenkins-bin-1.584-r1.ebuild,
  jenkins-bin-1.585.ebuild:
  Work around cantankerous eclass.

*jenkins-bin-1.585 (22 Oct 2014)

  22 Oct 2014; Manuel Rüger <mrueg@gentoo.org> +jenkins-bin-1.585.ebuild:
  Version bump. Add JENKINS_DIR as requested by Joakim Tjernlund.

*jenkins-bin-1.584-r1 (21 Oct 2014)

  21 Oct 2014; Tony Vroon <chainsaw@gentoo.org> -jenkins-bin-1.584.ebuild,
  +jenkins-bin-1.584-r1.ebuild, +files/jenkins-bin.init2,
  +files/jenkins-bin.logrotate:
  Logrotate snippet as written by Travis Hansen in bug #526166. Stop attempting
  to create a /var/run directory structure, those sands have shifted. Enhance
  init script to create home directory if missing. Do not assign the jenkins
  user a shell as it is not needed, as per Agostino "ago" Sarubbo on
  #gentoo-dev. Remove older revision.

  20 Oct 2014; Manuel Rüger <mrueg@gentoo.org> jenkins-bin-1.584.ebuild:
  Fix install.

*jenkins-bin-1.584 (20 Oct 2014)
