@@ -1,9 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX jenkins-bin.confd 998 SHA256 8cd3e217ae11f47b73f8a3f28beb2f94b14e24da4e822f7209b19a2f14dccb3b SHA512 465ade6325efa05b4a150234f847ad19b9824f667fdc8f783af3d9842afc2815ee3d20dfd9566348701102bf28e1e0627af27ae43d055a9a6279ed638d8ece8b WHIRLPOOL 5c0dee7d648c22c65fcad7ec678ac839d1ab2d61aa52c8e54dccb6a9d58bcda5cca9685e570f0fe5b5f0fd6dd6ce0a47acc616cb9c5f6568758f92125a38f8c8
 AUX jenkins-bin.init2 1781 SHA256 75f8a4dc5c3c03b2f3ac52860b11bf2a245976b4b726b35cfe20ec2acbbb7e08 SHA512 edd83f1d92433441ee2021ab096367ffa17808a4e5564cabec8d9e00276abaec8916bb55bc842ad49ffc9fe6f5b24b8e93a20b247100e96f667fb90f87e6e33c WHIRLPOOL 22735e7b9ad35cec7b7a6e9ba146345786e0d3abf25b8c7d7b93228a779e99458b10831edacc372cef62770687835f7f4096cff3ebdc2b0dfc398e2da6d31996
 AUX jenkins-bin.logrotate 502 SHA256 2c18c2a6757246fe4a1e87191ac6ca529126ab6f0b85c48f6d350c4802a71194 SHA512 86262c89495ed26b4996a55b39bd7f57826010500ef5f668ea28ffcdc3bbce73481158340d24876a3dfc6f7ea6ec872edd40f89bfd9a0bea3aa2d61eeeeddbdd WHIRLPOOL 920b5fe2e776c0a43c964c0c43209c7f2d7cef4bb2a9bfc0a4a4d99797f4be9c78b489b76c3928248ccfeadb10213d643eb12e6ffeb45824ef4f92e9d7924582
 DIST jenkins-bin-1.565.3.war 67867391 SHA256 a7d6f7dfc39374490861499589d5b4dfff2538f663a4f50a69f22601bf5bba7f SHA512 cef127050b39b294f7fe7f3eb627adabac9b5469af0c9fd016064ce8ab7ef51c387b9b0b618d91cd9231a38ddffcf42e0599201a6627a7601a183d9c0b2fe1d0 WHIRLPOOL 8fdebc5704099335e6d55f8831e57eab7454abc2b16e8701dfd52e414f60b8f8c796d1f65f2c39b0d5e4adc7f7a14981c18acc8a5402a651d5bb58e9ba5d592a
 DIST jenkins-bin-1.586.war 67995785 SHA256 d7959b5ac134aa6e49e577e824856c53966df400903ac5b0f31d6bf0a47eb8ba SHA512 5fe1c58f458a991cc8f9751ca9c77b374606e1e23c24528db9e1a65d0aafa620de17bc4dd3bf8580aac829a59d0f0b2bc9b17369f3d4e4fe121a8ff8d1bc1241 WHIRLPOOL 457badf5fbef9c4fe74d5c0bd54bc1d888f419af0bb04bde55651e4761a720c26b98d3e88498668ff5a8e669b2e24ad898b8acab3cf920f86a5afc95e2f7233c
-EBUILD jenkins-bin-1.565.3-r1.ebuild 1144 SHA256 77255ea6328cea656dc727606ac33ad9d68523c5e24dd14e824491298dc259ea SHA512 9a5b472fbc15f685c781a881f890f589ad85907a4b2ffbc125be57ac869f0dcb9c33d675b7d16e3369171c3849fce1deb6777e8801b60d5f63b2dad7d8b52952 WHIRLPOOL 517758976606f1d12e4e2a4e791efc8f73410fe87b8ab8b3059696cda815ee894d5a0d53ef338d8605678eecba5b2f856490e42b55fe616d27a2c1653589565d
-EBUILD jenkins-bin-1.586-r1.ebuild 1135 SHA256 91f8abf934170fcc289998ff189acbfea4d7ecb105452075ece9447ec2180463 SHA512 d15b9ca0668acbef59b140760fa3954a70cdb81dd0d8b0b9c17a2c8c60cc45c4077c18ee0762f6f37ed36982610092966d96d20a1eb030cdf529427ee91ba103 WHIRLPOOL 82c8afeb06bc63a6036aed09a910d2c54b59e51ce7b0bd6ead9e431726759811f40dd5a1446f59d721542053300a13c4e4e3a90ee4db83bcdfdb5dc58e9328f0
-MISC ChangeLog 2186 SHA256 7458472e8b96238ef94f8ccf7385e3b89752f45c4bdcbdca2ac01b628e98fa0e SHA512 361ca94fabe68e7195d5b0659fef92160f89ee6f9b72d4b23ddadeb40691063986a8ebe9f000eddaa55d6a013b49d49c050f25fad32d8904a3f386ce54b0a9f9 WHIRLPOOL 7a6899191285d409f84334b5198fba92290c63dfa2cc9ad8df68ea9381bd6f05c469894e8cd98c8d2ea8dcf1def5f20c2e8e5d47f645e9de04eaf2ed9b157e77
+EBUILD jenkins-bin-1.565.3-r1.ebuild 1141 SHA256 fc6975003b5bf18f0a70076077113c346d5e694f0acb192ccfb332edef8d84a1 SHA512 e159767f7349ec92a740364797297c61cf58c16d77166e619148122b4dfd09eafc72831cebfd7f99ee9e090d85e8be650797b7b0109d397a0f6cc9a2e44c99c7 WHIRLPOOL aa37df71674f7c020ff3bedbf34622838e12b1ecb524dea15bb676d7572166a06c334b61a6841bbeea188de2ec70eea2120986500e61df59fcef14b0e5ab0e6a
+EBUILD jenkins-bin-1.586-r1.ebuild 1132 SHA256 ac5ebfb51438a8e07975e759c2595398d42fdf9c3f5dbd9dddc673ed81eb171c SHA512 8f70bd41c841f89663348382dc7a73ce2f3b418a60fd18e84e901d2a16d77b111c6ec21c6c8b269b7980d376abb7353d484f0508e98698757710a906fb2365b9 WHIRLPOOL 0ecf757ac1be9b9242dcfd14339d74bbd2ec09a49343f042ea298b99563e4e5347d6e73981b56f0f355eae8b5fcd3895094f55d6d2b13be2da050d6585a8673f
+MISC ChangeLog 2371 SHA256 50aa94dbbea621e3977d3cd76065828cffd513a05ac44f5211301db77e88692b SHA512 69873a57ae1fada0faa2d902ecf803359b94788bb23a97587e127d5af4fa4b178098c740579c52adf6decca0d0b26cca931ef98688100a0820b4e0bd044f8c3d WHIRLPOOL 5969272e24f9c64fefb20863b5ebb470bd256c71f3ba14e4442a1640dd5f16d9ec62f4df3f80475afd6634469080f6934d8cc557aab61e2d18a7eb4a0be9e332
 MISC metadata.xml 323 SHA256 1fe2512e65f90ccec2e80123923bdb2c3cb6f597c45754f6c9f8246761234a48 SHA512 3d0a3145eca160f429e10f2b48ae1415143f2175cc06a3569a8d7fb646dd14fab750c8f8df4ad71ae085915bc075fa0e3ed35ee20a84fd04deb9590bed8fd940 WHIRLPOOL 830a0c6f0046034b335756b21f7a00b081254e190e288db88161fc26ceb48f0652b2418b67022ec394489b1e23028e50bef67e808d771518bf4ac2076d7f403b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlRPbaQACgkQp5vW4rUFj5r/lQCgk94asuSDFE5UliaDpnrln3yw
+ezMAnR+JN/xpa0aFqF1pIpqSWQoAL8Ad
+=GY29
+-----END PGP SIGNATURE-----
